--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="icon" type="image/svg" href="/thumbs-up.svg" />
 
-    <title>Thumbs Up</title>
+    <title>Thums Up - Interactive Biriyani Hunt</title>
   </head>
   <body>
     <div id="root"></div>
